[package]
name = "specs-static"
version = "0.3.0"
authors = ["torkleyy <torkleyy@gmail.com>"]
description = """
specs-static is an extension for Specs that adds custom ids.
"""
documentation = "https://docs.rs/specs-static/"
repository = "https://github.com/torkleyy/specs-static"
readme = "README.md"
keywords = ["ecs", "gamedev", "specs"]
categories = ["concurrency"]
license = "MIT/Apache-2.0"
exclude = ["bors.toml", ".travis.yml"]

[badges]
travis-ci = { repository = "torkleyy/specs-static" }

[dependencies]
derivative = "1"
hibitset = "0.5"
shred = "0.7"
specs = "0.16"
shrev = "1.0"

